--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./ic.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <base href="./">
     <title></title>
   </head>
   <body>
